# oyl

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
data/: loop_investigation.cpp  multi_pulse_test.cpp  seo2memory1.cpp  speedcheck.cpp  synchronized-particle.cpp  synchronized-test.cpp  var_multi_loop.cpp
include/: constants.hpp  grid_2dim.hpp  memory_class.hpp  oneway_unit.hpp  particle_computation_methods.hpp  simulation_2d.hpp
sample/: memory-sample.cpp  onewayunit-sample.cpp  parameter_calc.cpp  particle-computation-multiseo.cpp  particle-computation-seo.cpp  seo-2dim-sample.cpp
src/: memory_class.cpp
